// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput Component applies custom style to container 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(38, 20, 60, 0.85)80",
        "borderColor": "rgba(82, 67, 194, 0.3)50",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "red",
      },
    ]
  }
>
  <FontAwesome6
    color="rgba(255, 255, 255, 0.7)"
    name="search"
    size={18}
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    clearButtonMode="never"
    onChangeText={[MockFunction]}
    placeholder="Search..."
    placeholderTextColor="rgba(255, 255, 255, 0.7)"
    returnKeyType="search"
    style={
      {
        "color": "#FFFFFF",
        "flex": 1,
        "fontSize": 16,
        "height": "100%",
        "paddingVertical": 0,
      }
    }
    value=""
  />
</View>
`;

exports[`SearchInput Component renders correctly with default props 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(38, 20, 60, 0.85)80",
        "borderColor": "rgba(82, 67, 194, 0.3)50",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 16,
      },
      undefined,
    ]
  }
>
  <FontAwesome6
    color="rgba(255, 255, 255, 0.7)"
    name="search"
    size={18}
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    clearButtonMode="never"
    onChangeText={[MockFunction]}
    placeholder="Search..."
    placeholderTextColor="rgba(255, 255, 255, 0.7)"
    returnKeyType="search"
    style={
      {
        "color": "#FFFFFF",
        "flex": 1,
        "fontSize": 16,
        "height": "100%",
        "paddingVertical": 0,
      }
    }
    value=""
  />
</View>
`;
